# butterfly_moe

./: .gitignore  LICENSE  README.md  __init__.py  full_work.py  pyproject.toml  requirements.txt  throughput.py  triton_butterfly_speedup.py
benchmarks/: __init__.py
butterfly_moe/: __init__.py
configs/: default.yaml
data/: __init__.py  wikitext.py
exp/: exp-10-acc-bit.py  exp-11-spinquant.py  exp-12-monarch.py  exp-2-acc-multiple.py  exp-6-mem-scaling.py  exp_1_accuracy.py  exp_4_non_power_2.py
models/: __init__.py  butterfly.py  experts.py  lm.py  transformer.py
scripts/: run_exp.py  train.py
training/: trainer.py
